  07 Oct 2012; Manuel Rueger (mrueg) gentoo@rueg.eu pidgin-gpg-0.9.ebuild:
  x11-plugins/pidgin-gpg: Fix indentation

*pidgin-gpg-0.9 (23 Sep 2012)

  23 Sep 2012; Manuel Rueger (mrueg) gentoo@rueg.eu +metadata.xml,
  +pidgin-gpg-0.9.ebuild:
  x11-plugins/pidgin-gpg: Initial version