@@ -1,4 +1,4 @@
 DIST pidgin-gpg-0.9.tar.gz 288403 SHA256 736681cb25da31eb8ced96055d4150d649fe6ef6e523b6f65846c3446ac09a96 SHA512 391d013dcc62972e13fded2737325d8262edd62c5afb640e244bc6dca868f966dcc4155c6a5604e5c87fc3dd0b3fdf5c339305756a9e6992765193c20838aa50 WHIRLPOOL 56d7f32b3b7affa2732eba9ef57940aa5272f4a99eaefdd78e44d869a2153817dc94d601009e62d5e2d4b008e9999b697736d930ff38763cd27b32a00edb0aa2
-EBUILD pidgin-gpg-0.9.ebuild 484 SHA256 8fd6d4a081ebbb36e7fbeab44a433ddd353788bff30c9948c6a9de88feb89245 SHA512 d97e288f5748458499d276da84f1e469fe842c775d1b8a808da8c9dfc982a9a9b62055a835c0369f29da8f1c1d4a375526fca6304851f9b10b31cbf50969b5c5 WHIRLPOOL 82dee6f597b0728573418f4c495cb6abf732079ede9744ffcd495e82772c582c2dc354b1753ea3b27a960511bcb6b7bfe208a693bf33e3cb2a0c82f2a2ff490f
-MISC ChangeLog 284 SHA256 97159afcfce5d038e8bbf9ce5979756a05656ad957b63124702b777c94d9f0bc SHA512 243b70f2109d0863d6d7159645f595e3bc50637c8030414ac70dfbc1cbd292ccaafa1d75cb30a2df10781ee775bd752867934d86b2188b2045420be32da09880 WHIRLPOOL 5f7b69211e239554e66460fc7a34954fe38dccf7d414ba899ff73cfa0b2958756b4d4050401bfc2dcecdfc830d6b6144d76d165e7e468a6d6d17959418332855
+EBUILD pidgin-gpg-0.9.ebuild 498 SHA256 cb47f388d0e2d4180b8da3eaa791d1f069cd0fbe9b403f5db7b2858806f8d0d6 SHA512 4f347ecf9cea8c0f157cd843e3e3745ab19ef4d29872f598a84e6a118c66c7f3de2b9f51e57ed966bf2a6f710eeabfbf5126dc8d09e1b73ae1447e337cc4f79a WHIRLPOOL 174ddc5bcbaabd49fc43a3f536af0801730f8c48699a9b99e3191c08e0dac80c8c1fb25ce9a1ab93e22cbe15fc0ef05f8e937ce7a7717c23c5c11b8409e95d13
+MISC ChangeLog 407 SHA256 c9c88143321e66bf18fbbb76aa056ecff2ca4c34d26e2861cfbba6ada494756a SHA512 afdd6a66c6b580c4aeca848871be8b5fe492a4521b4cd63427d9029587a25e4de8d5143a609a78962f6830a72dd00ea6893cb66ead79634b814158d428b95633 WHIRLPOOL 699e8e4e8057b367ddb22210d8d1e5717f7cb8b44f1ac9d9475b9320ffbff1ca4fcd1fe827820ea3eb11203adcb0865456c8ee5569fe1966fae76cb486e8cb94
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
